# genealogy-analysis-platform

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  environment.yml  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  models.py  runtime.py
apps/api/app/api/: __init__.py  graphql.py  rest.py
apps/api/app/services/: __init__.py  gedcom.py  graph.py
apps/api/tests/: test_api.py  test_auth.py  test_gedcom.py  test_imports.py  test_records.py
apps/web/: package.json
apps/web/app/: globals.css  home.module.css  layout.tsx  page.tsx
apps/web/app/admin/: admin-dashboard.tsx  admin.module.css  page.tsx
apps/web/app/admin/imports/: page.tsx
apps/web/app/admin/records/new/: page.tsx  record-editor.module.css  record-editor.tsx
apps/web/app/login/: login-screen.tsx  login.module.css  page.tsx
apps/web/components/scene/: canonical-genealogy-scene.tsx
apps/web/lib/: api.ts
docs/: architecture.md  development.md
docs/adr/: 0001-monorepo-foundation.md
docs/examples/: pilot-family.ged
infra/: docker-compose.yml
